Login aregister page view implemented, fixed navbar extra spacing, scrollbar styles implemented ,added new shared button

--- a/src/shared/buttons/Buttons.scss
+++ b/src/shared/buttons/Buttons.scss
@@ -16,3 +16,11 @@
     font-size: 1.5rem;
     padding: .1rem .5rem;
 }
+
+.purple-button { 
+  color: inherit;
+  background-color: $purple;
+  font-weight: 600;
+  padding: .5rem 3.5rem;
+  border-radius: .5rem;
+}
